# agentmesh

./: .env.example  .gitignore  .gitmodules  .gsd-notifications  .gsd-tracker.json  CONVERSATION-LOG.md  DEMO-VIDEO-SCRIPT.md  HANDOFF.md  PROBLEM-STATEMENT.md  PROMPT.md  README.md  SUBMISSION-CHECKLIST.md  SUBMISSION-GUIDE.md  SUBMISSION-STATUS.md  ZEROCLAW_INTEGRATION.md  compile-conversation-log.sh  fund-wallets.sh  start-zeroclaw-agents.sh  submit-project.sh
.planning/: DOMAIN-MODEL.md  DOMAIN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TEST-STRATEGY.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  DOMAIN-HINTS.md  STACK.md
.planning/phases/01-phase-1/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-phase-2/: 02-01-PLAN.md  02-01-SUMMARY.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-phase-3/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-phase-4/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-CONTEXT.md
agentmesh-cli/: .env.example  .gitignore  Cargo.toml  README.md
agentmesh-cli/src/: abi.rs  contract.rs  main.rs  meshes.rs  types.rs
agentmesh-cli/src/commands/: deploy.rs  list.rs  mod.rs  register.rs  scan.rs  search.rs
agentmesh-contracts/: .gitignore  README.md  foundry.toml
agentmesh-contracts/broadcast/Deploy.s.sol/11155111/: run-1773962519.json  run-1773962676.json
agentmesh-contracts/script/: Deploy.s.sol
agentmesh-contracts/src/: AgentRegistry.sol
agentmesh-contracts/src/interfaces/: IAgentRegistry.sol
agentmesh-contracts/test/: AgentRegistryTest.t.sol  DeployScript.t.sol  Scaffold.t.sol
docs/: DEPLOYMENT.md
zeroclaw-agents/: .env.example  Cargo.toml  README.md  run-demo.sh
zeroclaw-agents/analyzer/: Cargo.toml
zeroclaw-agents/analyzer/src/: main.rs
zeroclaw-agents/publisher/: Cargo.toml
zeroclaw-agents/publisher/src/: main.rs
zeroclaw-agents/scraper/: Cargo.toml
zeroclaw-agents/scraper/src/: main.rs
zeroclaw-agents/shared/: Cargo.toml
zeroclaw-agents/shared/src/: crypto.rs  lib.rs  registry.rs  transport.rs  types.rs
zeroclaw-workspaces/analyzer/: IDENTITY.md  config.toml
zeroclaw-workspaces/publisher/: IDENTITY.md  config.toml
zeroclaw-workspaces/scraper/: IDENTITY.md  config.toml
