[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"
description = "AgentMesh analyzer — orchestrates scraper→analyze→publish pipeline via x402 P2P"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
axum = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
url = "2"
