[package]
name = "scraper"
version = "0.1.0"
edition = "2021"
description = "AgentMesh scraper — axum WebSocket server, handles TaskRequest x402 messages"

[[bin]]
name = "scraper"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
