[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Shared x402 types, signing, and P2P transport for zeroclaw agents"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
url = "2"
